# ShieldCraft-AI

./: .coveragerc  .dockerignore  .env  .gitattributes  .gitignore  .lint_registry_snapshot.json  .nox-poetry-installed  .nox-poetry-installed-dev  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .~lock.CV.docx#  ARCHITECTURE.md  CV.docx  Dockerfile  Dockerfile.api  Dockerfile.ingestion  FEEDBACK_CONTRACT.md  INFRA_TODO.md  LICENSE  README.md  SECURITY.md  ShieldCraft-AI-Context.txt  all_aws_svgs.txt  amplify.yml  cdk.json  checklist.md  checklist_lite_review.py  chrome-net-export-log.json  cli.py  cognito-idp describe-user-pool-client --user-pool-id us-east-1_H6KHkYeES --client-id 2jio5rlqn6r2qe0otrgip4d5bp --region us-east-1  config.txt  copy_aws_icons.py  cv.txt  diagram_design_notes.txt  docker-compose.yml  jest.config.cjs  jest.docs.config.cjs  lighthouse_report.json  list_tree.cmd  (+15 more)
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md
.github/scripts/: update_checklist_progress.py
.github/workflows/: ci-health-report.yml  ci.yml  deployment-validation.yml  environment-config.yml  inject-amplify-config-secretsmanager.yml  inject-amplify-config.yml  monitoring-setup.yml  playwright-e2e.yml  release-please.yml  update-chainguard-digests.yml
.guard_logs/: ai-dev-report-latest.md
.logs/: ai-dev-latest.md
__mocks__/docusaurus/: Link.js  router.js  theme-common.js  useDocusaurusContext.js
ai_core/: chunking.py  model_loader.py  vector_store.py
ai_core/chunking/: chunk.py  chunking.py
ai_core/embedding/: benchmark_beir.py  benchmark_mteb.py  benchmark_mteb_custom.py  embedding.py
ai_core/eval/: __init__.py  spotcheck.py
ai_core/multi_agent/: __init__.py  orchestrator.py
api/: app.py
artifacts/ai-dev/: repo_scan.json  repo_scan.md
cdk.out/: ShieldCraftAuthStack.assets.json  ShieldCraftAuthStack.template.json  manifest.json  tree.json
compute/: .gitkeep
config/: __init__.py  dev.yml  prod.yml  secrets.dev.yml  secrets.prod.yml  secrets.staging.yml  staging.yml
config/schema/: __init__.py  config_validator.py
data_prep/: ingestion_pipeline.py
data_prep/alerts/: ingest.py  schema.py
data_prep/api_gateway_logs/: ingest.py  schema.py
data_prep/assets/: ingest.py  schema.py
data_prep/configs/: ingest.py  schema.py
data_prep/container_events/: ingest.py  schema.py
data_prep/custom_telemetry/: ingest.py  schema.py
data_prep/dlp_events/: ingest.py  schema.py
data_prep/email_security/: ingest.py  schema.py
diagrams/: interactive_hotspots.drawio  level_one.drawio  level_two.drawio  level_two.drawio.xml  shieldcraft_ai_high_level.drawio  shieldcraft_ai_high_level.drawio.md
docs/: FINOPS_TAGGING.md  Guard Suite.txt  Marketing route.txt  Marketing-route-checklist.md  checklist.md  config_validation.md  multi-provider-auth-setup.md  poa.md  spec.md  tooling.md
docs-site/: .gitignore  .nox-npm-installed  AUTH_SETUP.md  DEPLOY_AMPLIFY_CONFIG.md  README.md  TESTS_README.md  docusaurus.config.ts  jest.config.js  package-lock.json  package.json  playwright.config.ts  shieldcraft-ci-ssm-policy.json  sidebars.ts  test-auth-import.ts  tsconfig.json
docs-site/docs/: adrs.md  (+30 more)
infra/: app.py  auth_app.py  pipeline_stack.py  shieldcraft_app_stage.py  stacks.py  tree.txt
lambda/beir_benchmark/: handler.py  pyproject.toml
lambda/beir_benchmark/tests/: test_handler.py
lint_snapshots/: lint-registry-contracts.json
mteb_results.json/: BornholmBitextMining.json
notebooks/: shieldcraft_scaffold.ipynb
nox_sessions/: __init__.py  api.py  beir.py  bootstrap.py  commit.py  deploy.py  docker.py  docs.py  drift.py  eval.py  iam.py  lambda.py  lint.py  notebook.py  release.py  sbom.py  security.py  test.py  utils.py  utils_color.py  utils_encoding.py  utils_poetry.py  yaml.py
pipeline/: .gitkeep
proton/: airbyte-service-template.yaml  attack_simulation-service-template.yaml  budget-service-template.yaml  cloud_native_hardening-service-template.yaml  compliance-service-template.yaml  controltower-service-template.yaml  dataquality-service-template.yaml  eventbridge-service-template.yaml  glue-service-template.yaml  iam-service-template.yaml  lakeformation-service-template.yaml  lambda-service-template.yaml  msk-service-template.yaml  networking-environment-template.yaml  opensearch-service-template.yaml  s3-service-template.yaml  sagemaker-service-template.yaml  secrets_manager-service-template.yaml  security-service-template.yaml  stepfunctions-service-template.yaml
scan/: shieldcraft_report.json  shieldcraft_report.md
scripts/: CONVERSATION_LOG.md  README.md  README_AMPLIFY_AUTOMATION.md  add-idps.sh  analyze_discovery_summary.py  analyze_proton_templates.py  audit_secrets.py  automate_amplify_config.py  aws_deploy_guardrail.sh  aws_safety_checker.py  batch_update_site_links.py  cdk.sh  chat_log_wrapper.sh  check-secrets.js  check_config_integrity.py  check_infra_sync.py  clean_md_html.py  clean_md_style_attrs.py  clear_and_run_notebooks.py  commit-script.old  commit-script.sh  conversation_log.py  convert_html_md_to_markdown.py  debug-auth-state.sh  demo_vertical_slice.py  deploy-auth-safe.sh  deploy-auth.sh  deploy_site.sh  deployment_safety_guard.py  documentation_baseline_review.py  enable-oauth.sh  generate_all_diagrams.py  get-cloudfront-domain.sh  github_actions_report.py  lint_forbidden_flags.py  mdx_bulk_fix.py  migrate_legacy_orchestration_tests.py  nox_parallel.sh  orchestrate_benchmarks.py  poetry_env_minimal_lock_test.py  (+20 more)
src/: main.py  main_healthcheck.py
tests/: auth-cognito.test.ts  auth-login-more.test.ts  conftest.py  test_api_demo.py  test_checklist_lite_review.py  test_chunking.py  test_chunking_config_and_batch.py  test_chunking_strategies.py  test_config_loader.py  test_config_loader_secrets.py  test_config_scaffold.py  test_config_schema.py  test_embedding.py  test_ingestion_pipeline.py  test_model_loader.py  test_nox_lint_order.py  test_retrieval_spotcheck.py  test_stepfunctions_service.py  test_stepfunctions_stack.py  test_vector_store.py
vector/: .gitkeep
(+911 files in other folders)
